--- a/src/main/resources/templates/automobili/show.html
+++ b/src/main/resources/templates/automobili/show.html
@@ -15,7 +15,9 @@
         <h3 class="mt-2 fw-bold text-warning" th:text="${auto.name}"></h3>
         <h5 th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
         <p  th:text="${auto.description}"></p>
-        <h5 class="">Price: <span class="fw-bold text-success" th:text="${auto.price} + €"></span><span class="ms-4"><a th:href=@{/acquistoCliente} class="btn btn-outline-warning btn-sm">Acquista</a></span><span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
+        <h5 class="">Price: <span class="fw-bold text-success" th:text="${auto.price} + €"></span>
+            <span class="ms-4"><a th:href=@{/acquistoCliente} type="button" id="liveToastBtn" class="btn btn-outline-warning btn-sm">Acquista</a></span>
+            <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
     </div>
         <div class="col-4 text-center">
     </div>
