catalogo Auto aggiornato

--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -48,7 +48,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link color-hf" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
-                               th:href="@{/acquistoRifornitore}">Rifornimento</a>
+                               th:href="@{/admin/acquistoRifornitore}">Rifornimento</a>
                         </li>
                     </ul>
                     <form class="d-flex"
@@ -64,7 +64,7 @@
             </div>
             <div class="col-4 ps-5 pt-2 pb-2">
                 <a class="navbar-brand" th:href="@{/}">
-                    <h5 class="color-hf">gruppo</h5>
+                    <h5 class="color-hf">Gruppo</h5>
                     <h1 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-3"> S.R.L.</span></h1>
                 </a>
             </div>
