--- a/src/main/resources/templates/automobili/list.html
+++ b/src/main/resources/templates/automobili/list.html
@@ -11,9 +11,9 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
         </div>
         <div class="col-md-4 animated bounceInDown" th:each="auto : ${listaAuto}">
-            <div class="card ms-5" style="width: 17rem; padding: 0px;">
+            <div class="card border border-dark ms-5" style="width: 17rem; padding: 0px;">
                 <a th:href="@{/auto/show/{id}(id=${auto.id})}">
-                <img th:src="${auto.foto}" class="card-img" style="height: 150px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'" alt="foto">
+                <img th:src="${auto.foto}" class="card-img border border-dark" style="height: 150px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'" alt="foto">
                 </a>
                 <div class="card-body text-center">
                     <h6 class="text-center"><strong>AUTOJAITA S.R.L.</strong></h6>
@@ -32,10 +32,6 @@
         </div>
     </div>
 </div>
-<div class="bg-light text-center">
-<a th:href=@{/auto/create} class="btn btn-outline-dark btn-sm m-3">Aggiungi Auto +</a>
-</div>
-
 <footer th:replace="fragments/resources :: footer"></footer>
 <th:block th:replace="fragments/resources :: script"></th:block>
 </body>
