--- a/src/main/resources/templates/automobili/show.html
+++ b/src/main/resources/templates/automobili/show.html
@@ -16,7 +16,12 @@
         <h5 th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
         <p  th:text="${auto.description}"></p>
         <h5 class="">Price: <span class="fw-bold text-success" th:text="${auto.price} + €"></span>
-            <span class="ms-4"><a th:href=@{/acquistoCliente} type="button" id="liveToastBtn" class="btn btn-outline-warning btn-sm">Acquista</a></span>
+            <form th:action="@{/auto/{id}(id=${auto.id})}"
+                  method="post"
+                  onsubmit="return confirm('Sei sicuro di voler acquistare questa auto?')"
+                  style="display:inline;">
+                <button type="submit" class="btn btn-outline-warning btn-sm">Acquista</button>
+            </form>
             <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
     </div>
         <div class="col-4 text-center">
