--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -5,7 +5,7 @@
 <body>
 <header th:replace="fragments/resources :: header"></header>
 <main  class="span.animated">
-    <div class="container mb-3">
+    <div class="container-fluid mb-3 bg-light">
         <div class="row">
             <h1 class="text-center mt-3 mb-3 color-hf animated tada"><strong>Le Auto più vendute</strong></h1>
             <hr>
