--- a/src/main/resources/templates/rifornimento/index.html
+++ b/src/main/resources/templates/rifornimento/index.html
@@ -48,7 +48,8 @@
     </table>
     <div class="row justify-content-center mt-2 mb-3">
         <div class="col-12 text-center">
-            <a class="btn btn-primary btn-sm pr-3" th:href="@{/acquistoRifornitore/create}">Aggiungi rifornimento</a>
+            <a class="btn btn-primary btn-sm pr-3" th:href="@{/admin/acquistoRifornitore/create}">Aggiungi rifornimento</a>
+            <a class="btn btn-primary btn-sm pr-3" th:href="@{/admin/acquistoRifornitore/catalogoAuto}">Catalogo Auto</a>
             <a class="btn btn-primary btn-sm" th:href="@{/}">Back Home</a>
         </div>
     </div>
