aggiustati collegamenti dei bottoni alle rotte corrette

--- a/src/main/resources/templates/automobili/edit.html
+++ b/src/main/resources/templates/automobili/edit.html
@@ -10,7 +10,7 @@
             id="create-auto"
             method="post"
             th:object="${auto}"
-            th:action="@{/auto/edit/{id}(id=${auto.id})}"
+            th:action="@{/auto/admin/edit/{id}(id=${auto.id})}"
             class="row text-center d-flex justify-content-center gy-3">
 
         <div class="col-8">
