--- a/src/main/resources/templates/automobili/create.html
+++ b/src/main/resources/templates/automobili/create.html
@@ -10,7 +10,7 @@
                 id="create-auto"
                 method="post"
                 th:object="${auto}"
-                th:action="@{/auto/create}"
+                th:action="@{/auto/admin/create}"
                 class="row text-center d-flex justify-content-center gy-3">
 
             <div class="col-8">
