Aggiornamento card Home, grandezza.

--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -48,7 +48,7 @@
 
                         <li class="nav-item">
                             <a class="nav-link color-hf" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
-                               th:href="@{/admin/acquistoRifornitore}">Rifornimento</a>
+                               th:href="@{/admin/acquistoRifornitore}">Amministrazione</a>
                         </li>
                     </ul>
                     <form class="d-flex"
