--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -10,11 +10,11 @@
             <h1 class="text-center mt-3 mb-3 color-hf animated tada"><strong>Le Auto più vendute</strong></h1>
             <hr>
             <div class="col-md-4 mt-4 mb-4 animated bounceInLeft" th:each="auto : ${autoList}">
-                <div class="card border border-dark ms-5" style="width: 17rem; padding: 0px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+                <div class="card border border-dark ms-5" style="width: 25rem; height: 15rem; padding: 0px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
                     <a th:href="@{/auto/show/{id}(id=${auto.id})}">
-                        <img th:src="${auto.foto}" class="card-img border border-dark" style="height: 150px;">
+                        <img th:src="${auto.foto}" class="card-img border border-dark" alt="Image" style="height: 15rem;">
                     <div class="card-img-overlay text-center">
-                        <h5 th:text="${auto.name}" class="card-title text-center color-price-name"></h5>
+                        <h5 th:text="${auto.name}" class="card-title fs-1 text-center color-price-name mt-5" style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.4)'" onmouseout="this.style.transform='scale(1)'"></h5>
                     </div>
                     </a>
                 </div>
