--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -18,11 +18,10 @@
     <title th:text="${title}"></title>
 </head>
 <body>
-<header th:fragment="header">
-    <div class="container-fluid bg-color-hf pt-3 pb-3">
+<header th:fragment="header" style="height: auto;">
+    <div class="container-fluid bg-color-hf">
         <div class="row navbar navbar-expand-lg text-center">
             <div class="col-4 text-start pt-4 pb-4">
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -58,16 +57,15 @@
                           method="get"
                           id="auto-search"
                           role="search">
-                        <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Search">
-                        <button class="btn btn-outline-secondary" type="submit">Search</button>
+                        <input class="form-control" type="search" th:value="${preloadSearch}" name="Keyword" id="Keyword" placeholder="Cerca...">
+                        <button class="btn btn-outline-secondary" type="submit">Cerca</button>
                     </form>
                 </div>
 
             </div>
-            <div class="col-4 ps-5 pt-2 pb-2">
+            <div class="col-4 ps-5">
                 <a class="navbar-brand" th:href="@{/}">
-                    <h5 class="color-hf">Gruppo</h5>
-                    <h1 class="color-hf"><strong>AUTOJAITA</strong><span class="fs-3"> S.R.L.</span></h1>
+                    <img src="/AutoJaita.png" style="width: 25rem; height: 17rem;">
                 </a>
             </div>
             <div class="col-4 text-end fs-6 pt-5 pb-4">
