--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -1,67 +1,137 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-    <head th:replace="fragments/resources :: head('Auto List')"></head>
+<head th:replace="fragments/resources :: head('Auto List')"></head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Prompt:wght@200&display=swap" rel="stylesheet">
 
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<main  class="span.animated">
-    <div class="container-fluid mb-3 bg-light">
+<main class="span.animated">
+    <div class="container-fluid bg-light">
         <div class="row">
-            <h1 class="text-center mt-3 mb-3 color-hf animated tada"><strong>Le Auto più vendute</strong></h1>
+            <h1 class="text-center mt-3 mb-3 animated tada" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- Le Auto più vendute -</strong></h1>
             <hr>
 
             <div class="col-md-4 mt-4 mb-4 animated bounceInLeft" th:each="auto : ${autoList}">
-                <div class="card border border-dark ms-5" style="width: 25rem; height: 15rem; padding: 0px; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+                <div class="card border border-dark ms-5"
+                     style="width: 25rem; height: 15rem; padding: 0px; transition: transform 0.3s;"
+                     onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
                     <a th:href="@{/auto/show/{id}(id=${auto.id})}">
-                        <img th:src="${auto.foto}" class="card-img border border-dark" alt="Image" style="height: 15rem;">
-                    <div class="card-img-overlay text-center">
-                        <h5 th:text="${auto.name}" class="card-title fs-1 text-center color-price-name margin-foto" style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.4)'" onmouseout="this.style.transform='scale(1)'"></h5>
-                    </div>
+                        <img th:src="${auto.foto}" class="card-img border border-dark" alt="Image"
+                             style="height: 15rem;">
+                        <div class="card-img-overlay text-center">
+                            <h5 th:text="${auto.name}" class="card-title fs-1 text-center color-price-name margin-foto"
+                                style="transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.4)'"
+                                onmouseout="this.style.transform='scale(1)'"></h5>
+                        </div>
                     </a>
                 </div>
             </div>
             <hr>
-            <h1 class="text-center color-hf mt-5 mb-5"><strong>AutoJaita la Concessionaria del futuro</strong></h1>
+            <div class="row">
+                <h1 class="text-center mt-2 mb-2" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- Concessionarie Ufficiali -</strong></h1>
+            </div>
+            <div class="row mt-5 mb-5 text-center">
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/A/Audi-logo-ED84DFE2E3-seeklogo.com.png"
+                         style="height: 100px">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/B/bmw-logo-248C3D90E6-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.worldvectorlogo.com/logos/lamborghini.svg" style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/fiat-3-logo-png-transparent.png"
+                         style="height: 100px;">
+                </div>
+            </div>
+            <div class="row mt-5 mb-5 text-center">
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/M/mercedes-benz-logo-0DCE214555-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/F/ferrari-logo-7935CF173C-seeklogo.com.png"
+                         style="height: 120px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/A/alfa-romeo-logo-3E9AF560E2-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/jeep-7-logo-png-transparent.png"
+                         style="height: 80px;">
+                </div>
+            </div>
+            <div class="row mt-5 mb-5 text-center">
+                <div class="col-3">
+                    <img src="https://zeevector.com/wp-content/uploads/Porsche-Logo-Transparent.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/L/land-rover-logo-86296C9BE7-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/P/peugeot-logo-660EC9A8CA-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.worldvectorlogo.com/logos/ford-logo-flat.svg" style="height: 80px;">
+                </div>
+            </div>
+
+            <h1 class="text-center mt-5 mb-5" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita la Concessionaria del futuro -</strong></h1>
             <div class="col-12 mt-5 col-md-6">
                 <br>
                 <br>
-            <h5 class="color-hf">Chi siamo:</h5>
+                <h4 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>Chi siamo:</strong></h4>
                 <p style="font-size: 15px">
                     Da decenni, AutoJaita è sinonimo di eccellenza nel mondo automobilistico.
                     Siamo più di un concessionario, siamo una comunità appassionata di esperti automobilistici dedicati
                     a fornire un servizio straordinario e veicoli di alta qualità.
-                    La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione un'ampia gamma di auto
-                    che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La nostra squadra di professionisti
+                    La nostra missione è superare le aspettative dei nostri clienti, mettendo a disposizione un'ampia
+                    gamma di auto
+                    che rispecchiano l'eccellenza del design, dell'innovazione e delle prestazioni. La nostra squadra di
+                    professionisti
                     è qui per guidarti in ogni passo del processo di selezione dell'auto perfetta per le tue esigenze.
-                    Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza, affidabilità e dedizione. Con AutoJaita,
-                    non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si tramanda da generazioni.
+                    Siamo orgogliosi di offrire un'esperienza di acquisto unica, basata su trasparenza, affidabilità e
+                    dedizione. Con AutoJaita,
+                    non stai solo acquistando un'auto; stai diventando parte di una storia di successo che si tramanda
+                    da generazioni.
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <img src="https://img.freepik.com/free-photo/brand-new-car-ai-generated-image_268835-5688.jpg" alt="Auto-Arancione">
+                <img src="https://img.freepik.com/free-photo/brand-new-car-ai-generated-image_268835-5688.jpg"
+                     alt="Auto-Arancione">
             </div>
-        </div>
-    </div>
-    <div class="container mb-3">
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <img style="width:650px;" src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg" alt="Auto-Arancione">
+            <div class="col-12 col-md-6 pb-2 pt-1">
+                <img style="width:650px;"
+                     src="https://cdnwp.dealerk.com/eed49ed7/uploads/sites/315/2018/04/acquistare-da-ms-automobili.jpg"
+                     alt="Auto-Arancione">
             </div>
-            <br>
-            <div class="col-12 mt-5 ps-5 pt-5 col-md-6">
-                <h5 class="color-hf">Perchè Scegliere AutoJaita?</h5>
-                <p style="font-size: 15px">Scegliere AutoJaita significa immergersi in un universo automobilistico di classe e convenienza.
-                    Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza eguali.
-                    Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli standard più elevati.
-                    Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si fondono in un'offerta unica,
-                    plasmata per soddisfare le tue esigenze automobilistiche
+            <div class="col-12 col-md-4 mt-3 ps-5 pt-5 text-start">
+                <h4 style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>Perchè Scegliere AutoJaita?</strong></h4>
+                <p style="font-size: 15px">Scegliere AutoJaita significa immergersi in un universo automobilistico di
+                    classe e convenienza.
+                    Con prezzi vantaggiosi e una selezione di veicoli di qualità, offriamo un'esperienza di guida senza
+                    eguali.
+                    Collaboriamo con partner di fama, assicurando che ogni auto nel nostro showroom soddisfi gli
+                    standard più elevati.
+                    Entra nel mondo di AutoJaita, dove l'eleganza, le prestazioni e l'affidabilità si fondono in
+                    un'offerta unica,
+                    plasmata per soddisfare le tue esigenze automobilistiche.
                 </p>
             </div>
         </div>
     </div>
+
 </main>
 <footer th:replace="fragments/resources :: footer"></footer>
-
 <th:block th:replace="fragments/resources :: script"></th:block>
 </body>
 </html>
