--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -37,6 +37,52 @@
                     <img th:src="${logo.logo}"
                          style="height: 100px">
                 </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/B/bmw-logo-248C3D90E6-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.worldvectorlogo.com/logos/lamborghini.svg" style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/fiat-3-logo-png-transparent.png"
+                         style="height: 100px;">
+                </div>
+            </div>
+            <div class="row mt-5 mb-5 text-center">
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/M/mercedes-benz-logo-0DCE214555-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/F/ferrari-logo-7935CF173C-seeklogo.com.png"
+                         style="height: 120px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/A/alfa-romeo-logo-3E9AF560E2-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.freebiesupply.com/logos/large/2x/jeep-7-logo-png-transparent.png"
+                         style="height: 80px;">
+                </div>
+            </div>
+            <div class="row mt-5 mb-5 text-center">
+                <div class="col-3">
+                    <img src="https://zeevector.com/wp-content/uploads/Porsche-Logo-Transparent.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/L/land-rover-logo-86296C9BE7-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/P/peugeot-logo-660EC9A8CA-seeklogo.com.png"
+                         style="height: 100px;">
+                </div>
+                <div class="col-3">
+                    <img src="https://cdn.worldvectorlogo.com/logos/ford-logo-flat.svg" style="height: 80px;">
+                </div>
             </div>
 
             <h1 class="text-center mt-5 mb-5" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita la Concessionaria del futuro -</strong></h1>
