Import modificato per prova

--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -33,8 +33,8 @@
                 <h1 class="text-center mt-2 mb-2" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- Concessionarie Ufficiali -</strong></h1>
             </div>
             <div class="row mt-5 mb-5 text-center">
-                <div class="col-3" th:each="logo : ${autoList}">
-                    <img th:src="${logo.logo}"
+                <div class="col-3">
+                    <img src="https://seeklogo.com/images/A/Audi-logo-ED84DFE2E3-seeklogo.com.png"
                          style="height: 100px">
                 </div>
                 <div class="col-3">
