--- a/src/main/resources/templates/home/landing-page.html
+++ b/src/main/resources/templates/home/landing-page.html
@@ -84,6 +84,9 @@
                     <img src="https://cdn.worldvectorlogo.com/logos/ford-logo-flat.svg" style="height: 80px;">
                 </div>
             </div>
+            <div class="col-12">
+                <img src="">
+            </div>
 
             <h1 class="text-center mt-5 mb-5" style="font-family: 'Fredoka', sans-serif; font-family: 'Prompt', sans-serif;"><strong>- AutoJaita la Concessionaria del futuro -</strong></h1>
             <div class="col-12 mt-5 col-md-6">
