--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -18,10 +18,12 @@
                 <h5 th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
                 <p  th:text="${auto.description}"></p>
                 <h5>Price: <span class="fw-bold text-success" th:text="${auto.getFormattedPrice()} + €"></span></h5>
-                <form th:action="@{/acquistoCliente/create/{id}(id=${auto.id})}"
-                method="post">
+                <form th:action="@{/acquistoCliente/create}"
+                method="post" th:object="${acquistoCliente}">
                     <label for="quantita" class="form-label">Quantità</label>
-                    <input type="number" id="quantita" th:field="${acquistoCliente.quantita}">
+                    <input type="number" id="quantita" th:field="*{quantita}">
+                    <input type="hidden" th:field="*{data}">
+                    <input type="hidden" th:field="*{auto}">
                     <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
                 </form>
                 <span class="ms-2"><a th:href=@{/auto/show/{id}(id=${auto.id})} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
