--- a/src/main/resources/templates/acquisto/formAcquisto.html
+++ b/src/main/resources/templates/acquisto/formAcquisto.html
@@ -4,29 +4,30 @@
 <body>
 <header th:replace="fragments/resources :: header"></header>
 <main>
-    <div class="container card">
+    <div class="container w-50 card mt-5 mb-5 pb-3">
         <div class="row">
-            <div class="col-12 text-center">
+            <div class="col-12 text-center" style="padding: 0%">
                 <a th:href="@{/auto}">
-                    <img class="img-fluid shadow-lg" th:src="@{${auto.foto}}" style="transition: transform 0.3s;"
-                         onmouseover="this.style.transform='scale(1.090)'" onmouseout="this.style.transform='scale(1)'"
+                    <img class="img-fluid shadow-lg" th:src="@{${auto.foto}}" style="transition: transform 0.3s; width: 100%; height: 350px;"
+                         onmouseover="this.style.transform='scale(1.030)'" onmouseout="this.style.transform='scale(1)'"
                          alt="foto">
                 </a>
             </div>
             <div class="col-12 text-center">
-                <h3 class="mt-2 fw-bold text-warning" th:text="${auto.name}"></h3>
-                <h5 th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
-                <p  th:text="${auto.description}"></p>
+                <h3 class="mt-2 card-title fw-bold text-warning" th:text="${auto.name}"></h3>
+                <h5 class="fw-bold" th:if="${auto.autoType != null}" th:text="${auto.autoType.name}"></h5>
+                <p class="text-center card-text" th:text="${auto.description}"></p>
                 <h5>Price: <span class="fw-bold text-success" th:text="${auto.getFormattedPrice()} + €"></span></h5>
                 <form th:action="@{/acquistoCliente/create}"
                 method="post" th:object="${acquistoCliente}">
                     <label for="quantita" class="form-label">Quantità</label>
-                    <input type="number" id="quantita" th:field="*{quantita}">
+                    <input class="form-input" type="number" id="quantita" th:field="*{quantita}">
                     <input type="hidden" th:field="*{data}">
                     <input type="hidden" th:field="*{auto}">
                     <button type="submit" class="btn btn-outline-warning btn-sm">Conferma Acquisto</button>
+                    <span class="ms-2"><a th:href=@{/auto} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
                 </form>
-                <span class="ms-2"><a th:href=@{/auto/show/{id}(id=${auto.id})} class="btn btn-outline-dark btn-sm">Indietro</a></span></h5>
+
             </div>
         </div>
     </div>
