--- a/src/main/resources/templates/fragments/resources.html
+++ b/src/main/resources/templates/fragments/resources.html
@@ -46,11 +46,29 @@
                                 </li>
                             </ul>
                         </div>
-
-                        <li class="nav-item">
-                            <a class="nav-link color-hf" th:classappend="${area == 'acquistoRifornitore' ? 'active' : ''}"
-                               th:href="@{/admin/acquistoRifornitore}">Amministrazione</a>
-                        </li>
+                        <div class="collapse navbar-collapse" id="navbarNavDarkDropdown2">
+                            <ul class="navbar-nav">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle color-hf" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Amministrazione
+                                    </a>
+                                    <ul class="dropdown-menu " >
+                                        <li>
+                                            <a class="dropdown-item" th:href="@{/admin/acquistoRifornitore}">Rifornimento</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" th:href="@{/admin/acquistoRifornitore/catalogoVendite}">Vendite</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" th:href="@{/admin/acquistoRifornitore/catalogoAuto}">Catalogo Auto</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" th:href="@{/admin/acquistoRifornitore/catalogoCategorie}">Catalogo Categorie</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </ul>
                     <form class="d-flex"
                           th:action="@{/auto}"
