--- a/src/main/resources/templates/automobili/edit.html
+++ b/src/main/resources/templates/automobili/edit.html
@@ -3,8 +3,8 @@
 <head th:replace="fragments/resources :: head('Auto Edit')"></head>
 <body>
 <header th:replace="fragments/resources :: header"></header>
-<div class="container text-center">
-    <h1 class="">Create Auto</h1>
+<div class="container text-center card mt-5 mb-5">
+    <h1 class="">Modifica Auto</h1>
     <hr>
     <form
             id="create-auto"
