--- a/src/main/resources/templates/catalogo/edit.html
+++ b/src/main/resources/templates/catalogo/edit.html
@@ -28,9 +28,10 @@
                 </div>
             </div>
 
-            <div class="col-8 mt-5 mb-5">
-                <button type="submit" class="btn btn-primary">Save</button>
-                <a class="btn btn-primary" th:href="@{/auto}">Back Home</a>
+            <div class="row justify-content-end">
+                <div class="col-4 mt-5 mb-5 text-center">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
             </div>
         </form>
 
